--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,3 +45,8 @@ repos:
     hooks:
       - id: rubocop
         args: ["--autocorrect"]
+
+  - repo: https://github.com/rhysd/actionlint.git
+    rev: v1.7.7
+    hooks:
+      - id: actionlint-docker
