API keys controller actions
Kill all javascript

Add page layout template

Update footer links

Add feedback page navigation

Build homepage

Add error handling in routes

Add api keys index

Rename specs

Add dashboard index page

fix syntax error

Add create new api key

Add buttons to create new api key

Add create, delete, revoke views

Add feedback navigation

HMRC-827: Adds workflows and infrastructure for the dev hub

This includes the relevant terraform and ECS service configuration

HMRC-827: Configure puma

HMRC-827: Removes unused workflow

HMRC-827: Fixes load balancer reference

HMRC-827: Adds missing libs Dockerfile

HMRC-827: Removes unused linter

HMRC-827: Fixes early secret dependency

HMRC-827: Adds healthcheckz

Bump nokogiri from 1.18.3 to 1.18.4

Bumps [nokogiri](https://github.com/sparklemotion/nokogiri) from 1.18.3 to 1.18.4.
- [Release notes](https://github.com/sparklemotion/nokogiri/releases)
- [Changelog](https://github.com/sparklemotion/nokogiri/blob/main/CHANGELOG.md)
- [Commits](https://github.com/sparklemotion/nokogiri/compare/v1.18.3...v1.18.4)

---
updated-dependencies:
- dependency-name: nokogiri
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>

HMRC-879: Adds refresh_data service and test

This will be responsible for finding and creating the relevant data that
we want to populate in postgres

HMRC-879: Configure permissions for refresh

HMRC-879: Make sure we migrate the tables

HMRC-879: Be more permissive with apigateway

The dev-hub will be primarily responsible for managing this gateway so
just be permissive

HMRC-879: Updates provider versions

HMRC-879: Stop manually deploying

HMRC-907: Replicate creating and associating an api key with a usage plan

I also behind the scenes populated some env vars for this

HMRC-907: Make the api key creation a bit more robust

HMRC-911: Adds revoke/delete services

HMRC-928: Adds localstack

- Populate seeds.rb
- Dynamically enable/hint at using localst

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,6 @@
+AWS_DEFAULT_REGION=eu-west-2
+ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
 PORT=3004
+FEEDBACK_URL='https://dev.trade-tariff.service.gov.uk/feedback'
+ORGANISATION_ID='local-development'
+LOCALSTACK_HOST='host.docker.internal'
