--- a/.github/workflows/deploy-to-development.yml
+++ b/.github/workflows/deploy-to-development.yml
@@ -60,19 +60,27 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:17
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_DB: tariff_dev_hub_test
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
     steps:
       - uses: actions/checkout@v4
       - id: ruby-version
         run: echo "RUBY_VERSION=$(cat .ruby-version)" >> "$GITHUB_OUTPUT"
+      - run: echo ${{ env.DOCKER_IMAGE }}
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ steps.ruby-version.outputs.RUBY_VERSION }}
           bundler-cache: true
-      - uses: actions/setup-node@v4
-        with:
-          cache: yarn
-      - run: yarn install --frozen-lockfile
       - run: bundle exec rspec
+        env:
+          DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/tariff_dev_hub_test"
 
   build:
     runs-on: ubuntu-latest
