--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -1,9 +1,11 @@
 name: Deploy to production
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows:
+      - 'Deploy to staging'
+    types:
+      - completed
   workflow_dispatch:
     inputs:
       ref:
@@ -35,6 +37,7 @@ jobs:
 
   deploy:
     environment: production
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     needs: build
     steps:
