HMRC-907: Replicate creating and associating an api key with a usage plan
I also behind the scenes populated some env vars for this

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
 AWS_DEFAULT_REGION=eu-west-2
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
 PORT=3004
+REST_API_ID="xxxxxxxxxx",
+REST_STAGE_NAME="development",
