--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -5,11 +5,6 @@ on:
     branches:
       - main
   workflow_dispatch:
-    inputs:
-      ref:
-        description: 'The git ref to deploy'
-        required: true
-        default: 'main'
 
 permissions:
   contents: read
@@ -31,7 +26,7 @@ jobs:
       - uses: trade-tariff/trade-tariff-tools/.github/actions/build-and-push@main
         with:
           ecr-url: ${{ env.ECR_URL }}
-          ref: ${{ inputs.ref || steps.docker-tag.outputs.DOCKER_TAG }}
+          ref: ${{ steps.docker-tag.outputs.DOCKER_TAG }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -43,7 +38,7 @@ jobs:
       - uses: trade-tariff/trade-tariff-tools/.github/actions/terraform-apply@main
         with:
           environment: ${{ env.ENVIRONMENT }}
-          ref: ${{ inputs.ref || steps.docker-tag.outputs.DOCKER_TAG }}
+          ref: ${{ steps.docker-tag.outputs.DOCKER_TAG }}
           ssh-key: ${{ secrets.PRIVATE_SSH_KEY }}
 
   notifications:
@@ -56,3 +51,12 @@ jobs:
           with:
             result: ${{ needs.deploy.result }}
             slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
+
+  e2etest:
+    uses: trade-tariff/trade-tariff-tools/.github/workflows/e2e-fpo-tests.yml@main
+    needs: deploy
+    with:
+      test-environment: staging
+    secrets:
+      scp-username: ${{ secrets.SCP_USERNAME }}
+      scp-password: ${{ secrets.SCP_PASSWORD }}
