--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,5 @@
+DELETION_ENABLED=true
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
+ORGANISATION_ID='local-testing'
 REST_API_ID="xxxxxxxxxx",
 REST_STAGE_NAME="test",
-ORGANISATION_ID='local-testing'
