HMRC-877: Code review

--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,4 @@ DELETION_ENABLED=true
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
 REST_API_ID="xxxxxxxxxx",
 REST_STAGE_NAME="test",
+SCP_ENABLED=false
