HMRC-1034: Adds test coverage for the govuk notifier

--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,8 @@
+APPLICATION_SUPPORT_EMAIL="foo@bar.com"
 DELETION_ENABLED=true
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
+REGISTRATION_TEMPLATE_ID=bar
 REST_API_ID="xxxxxxxxxx",
 REST_STAGE_NAME="test",
 SCP_ENABLED=false
+SUPPORT_TEMPLATE_ID=foo
