--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 AWS_DEFAULT_REGION=eu-west-2
+DELETION_ENABLED=true
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
-PORT=3004
-FEEDBACK_URL='https://dev.trade-tariff.service.gov.uk/feedback'
-ORGANISATION_ID='local-development'
 LOCALSTACK_HOST='host.docker.internal'
+PORT=3004
+SCP_ENABLED=false
+SEND_EMAILS=false
