HMRC-1059: Adds integration tests of registration flows

--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,19 @@
 APPLICATION_SUPPORT_EMAIL="foo@bar.com"
+AWS_DEFAULT_REGION=eu-west-2
 DELETION_ENABLED=true
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
+FEEDBACK_URL='https://dev.trade-tariff.service.gov.uk/feedback'
+LOCALSTACK_HOST='host.docker.internal'
+PORT=3000
 REGISTRATION_TEMPLATE_ID=bar
 REST_API_ID="xxxxxxxxxx",
 REST_STAGE_NAME="test",
 SCP_ENABLED=false
+SCP_OPEN_ID_BASE_URL=http://localhost:3000
+SCP_OPEN_ID_CALLBACK_PATH=/auth/redirect
+SCP_OPEN_ID_CLIENT_ID=foo
+SCP_OPEN_ID_CLIENT_SECRET=bar
+SCP_OPEN_ID_ISSUER_BASE_URL=https://foo@bar.com
+SCP_OPEN_ID_SECRET=baz
+SEND_EMAILS=true
 SUPPORT_TEMPLATE_ID=foo
