--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -1,62 +1,24 @@
 name: Deploy to staging
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 permissions:
   contents: read
   id-token: write
 
-env:
-  AWS_REGION: eu-west-2
-  ECR_URL: 382373577178.dkr.ecr.eu-west-2.amazonaws.com/tariff-dev-hub-production
-  ENVIRONMENT: staging
-  IAM_ROLE_ARN: arn:aws:iam::451934005581:role/GithubActions-ECS-Deployments-Role
-
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - id: docker-tag
-        run: echo "DOCKER_TAG=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
-      - uses: trade-tariff/trade-tariff-tools/.github/actions/build-and-push@main
-        with:
-          ecr-url: ${{ env.ECR_URL }}
-          ref: ${{ steps.docker-tag.outputs.DOCKER_TAG }}
-
   deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - id: docker-tag
-        run: echo "DOCKER_TAG=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
-      - uses: trade-tariff/trade-tariff-tools/.github/actions/terraform-apply@main
-        with:
-          environment: ${{ env.ENVIRONMENT }}
-          ref: ${{ steps.docker-tag.outputs.DOCKER_TAG }}
-          ssh-key: ${{ secrets.PRIVATE_SSH_KEY }}
-
-  notifications:
-      runs-on: ubuntu-latest
-      needs: deploy
-      if: always()
-      steps:
-        - uses: actions/checkout@v4
-        - uses: trade-tariff/trade-tariff-tools/.github/actions/slack-notify@main
-          with:
-            result: ${{ needs.deploy.result }}
-            slack_webhook: ${{ secrets.SLACK_WEBHOOK }}
-
-  e2etest:
-    uses: trade-tariff/trade-tariff-tools/.github/workflows/e2e-fpo-tests.yml@main
-    needs: deploy
+    uses: trade-tariff/trade-tariff-tools/.github/workflows/deploy-ecs.yml@main
     with:
-      test-environment: staging
+      app-name: tariff-dev-hub
+      environment: staging
     secrets:
-      scp-username: ${{ secrets.SCP_USERNAME }}
       scp-password: ${{ secrets.SCP_PASSWORD }}
+      scp-username: ${{ secrets.SCP_USERNAME }}
+      slack-webhook: ${{ secrets.SLACK_WEBHOOK }}
+      ssh-key: ${{ secrets.PRIVATE_SSH_KEY }}
+      test-flavour: fpo
