--- a/.github/workflows/deploy-to-development.yml
+++ b/.github/workflows/deploy-to-development.yml
@@ -21,13 +21,12 @@ jobs:
     with:
       app-name: tariff-dev-hub
       environment: development
-      test-flavour: fpo
+      test-flavour: none
     secrets:
       scp-password: ${{ secrets.SCP_PASSWORD }}
       scp-username: ${{ secrets.SCP_USERNAME }}
       slack-webhook: ${{ secrets.SLACK_WEBHOOK }}
       ssh-key: ${{ secrets.PRIVATE_SSH_KEY }}
-      test-flavour: fpo
 
   start-services:
     runs-on: ubuntu-latest
