--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,8 @@ repos:
     hooks:
       - id: markdownlint-docker
         args:
+          - "--disable"
+          - "MD013"
           - "--ignore"
           - terraform
           - "--fix"
