PRDEX-162: Integrate with passwordless

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,6 @@
 AWS_DEFAULT_REGION=eu-west-2
 DELETION_ENABLED=true
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
+IDENTITY_AUTHENTICATION_ENABLED=false
 LOCALSTACK_HOST='host.docker.internal'
 PORT=3004
-SCP_ENABLED=false
-SEND_EMAILS=false
