--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,11 +19,6 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
 
-  - repo: https://github.com/trufflesecurity/trufflehog
-    rev: v3.88.18
-    hooks:
-      - id: trufflehog
-
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.44.0
     hooks:
@@ -45,3 +40,12 @@ repos:
     rev: v1.7.7
     hooks:
       - id: actionlint-docker
+
+  - repo: local
+    hooks:
+      - id: trufflehog
+        name: TruffleHog
+        description: Detect secrets in your repo
+        entry: bash -c '.github/bin/trufflehog'
+        language: system
+        stages: ["pre-commit", "pre-push"]
