OTTIMP-236 Create view and management for OTT Keys OTTIMP-244 Create Admin UI

--- a/.env.test
+++ b/.env.test
@@ -7,6 +7,6 @@ IDENTITY_AUTHENTICATION_ENABLED=true
 LOCALSTACK_HOST='host.docker.internal'
 PORT=3000
 RAILS_LOG_LEVEL=info
-REST_API_ID="xxxxxxxxxx",
-REST_STAGE_NAME="test",
+REST_API_ID="xxxxxxxxxx"
+REST_STAGE_NAME="test"
 UK_BACKEND_URL=http://localhost:3000/uk/api
