--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,8 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+      - id: file-contents-sorter
+        files: '.env.development|.env.test'
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.45.0
