OTTIMP-233: Adds notification sending via uk backend
- Adds support for a SendNotification service
- Adds Notificaton model
- Adds integration with model and service via the invitation model
- Adds a builder for invitation notifications
- Adds specs/test coverage
- Reshuffle gems to reflect their accurate test groups
- Adds unit test coverage for all of the above
- (behind the scenes) configuration of environment secrets to enable
  authenticated requests to the backend

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,5 @@ ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
 IDENTITY_AUTHENTICATION_ENABLED=false
 LOCALSTACK_HOST='host.docker.internal'
 PORT=3004
+RAILS_LOG_LEVEL=debug
+UK_BACKEND_URL=http://localhost:3000/uk/api
