--- a/.env.test
+++ b/.env.test
@@ -3,8 +3,10 @@ AWS_DEFAULT_REGION=eu-west-2
 DELETION_ENABLED=true
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
 FEEDBACK_URL='https://dev.trade-tariff.service.gov.uk/feedback'
+IDENTITY_AUTHENTICATION_ENABLED=true
 LOCALSTACK_HOST='host.docker.internal'
 PORT=3000
+RAILS_LOG_LEVEL=info
 REST_API_ID="xxxxxxxxxx",
 REST_STAGE_NAME="test",
-IDENTITY_AUTHENTICATION_ENABLED=true
+UK_BACKEND_URL=http://localhost:3000/uk/api
