--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -15,6 +15,16 @@ common: &default_settings
   # Relic. For more details, see https://docs.newrelic.com/docs/apm/new-relic-apm/maintenance/renaming-applications
   app_name: "dev-portal"
 
+  # Health check ignoring configuration
+  transaction_events:
+    enabled: true
+    ignore_transactions:
+      - "Rails::HealthController#show"
+
+  ignore_url_regexes:
+    - "^/healthcheckz"
+    - "^/up"
+
   distributed_tracing:
     enabled: false
 
