fix: correct newrelic transaction name for health checks

--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -20,6 +20,7 @@ common: &default_settings
     enabled: true
     ignore_transactions:
       - "Rails::HealthController#show"
+      - "Controller/rails/health/show"
 
   ignore_url_regexes:
     - "^/healthcheckz"
