Add dev bypass authentication for local development
- Add DevBypassAuthentication concern for bypassing identity service
- Add DevAuthController for simple password-based login
- Add dev login routes (/dev/login)
- Update AuthenticatedController to support dev bypass
- Update HomepageController to support dev bypass
- Add dev bypass configuration to TradeTariffDevHub
- Update seeds.rb with dev bypass organization setup
- Add comprehensive tests for dev bypass functionality

--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,11 @@
+# Dev Bypass Authentication (skip identity service)
 AWS_DEFAULT_REGION=eu-west-2
 DELETION_ENABLED=true
+DEV_BYPASS_ADMIN_PASSWORD=admin
+DEV_BYPASS_AUTH=true
+DEV_BYPASS_USER_PASSWORD=dev
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
-IDENTITY_AUTHENTICATION_ENABLED=false
+IDENTITY_AUTHENTICATION_ENABLED=true
 LOCALSTACK_HOST='host.docker.internal'
 PORT=3004
 RAILS_LOG_LEVEL=debug
