BAU: Stop testing production
- Production cannot have e2e tests run against it since we don't have a
  mailbox under our control in this environment
- This is actually fine as we don't really mind since we will have
  tested the lower environments before getting here

--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -21,7 +21,7 @@ jobs:
     with:
       app-name: tariff-frontend
       environment: production
-      test-flavour: fpo
+      test-flavour: none
     secrets:
       slack-webhook: ${{ secrets.SLACK_WEBHOOK }}
       ssh-key: ${{ secrets.PRIVATE_SSH_KEY }}
