OTTIMP-335: Adds validation for only active api keys
- Also makes sure the we have test coverage
- And that we render an error to the user in the UI when trying to
  create an API key

--- a/.github/workflows/deploy-to-development.yml
+++ b/.github/workflows/deploy-to-development.yml
@@ -27,6 +27,8 @@ jobs:
     secrets:
       slack-webhook: ${{ secrets.SLACK_WEBHOOK }}
       ssh-key: ${{ secrets.PRIVATE_SSH_KEY }}
+      non_admin_bypass_password: ${{ secrets.NON_ADMIN_BYPASS_PASSWORD }}
+      admin_bypass_password: ${{ secrets.ADMIN_BYPASS_PASSWORD }}
 
   start-services:
     if: >
