Enable role request in dev and standardise the nav bar

--- a/.env.development
+++ b/.env.development
@@ -5,6 +5,7 @@ DEV_BYPASS_ADMIN_PASSWORD=admin
 DEV_BYPASS_AUTH=true
 DEV_BYPASS_USER_PASSWORD=dev123
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
+FEATURE_FLAG_ROLE_REQUEST=true
 IDENTITY_AUTHENTICATION_ENABLED=true
 LOCALSTACK_HOST='host.docker.internal'
 PORT=3004
