--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,7 @@ DEV_BYPASS_AUTH=true
 DEV_BYPASS_USER_PASSWORD=dev123
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
 FEATURE_FLAG_ROLE_REQUEST=true
+GOVUK_APP_DOMAIN='*'
 IDENTITY_AUTHENTICATION_ENABLED=true
 LOCALSTACK_HOST='host.docker.internal'
 PORT=3004
