--- a/.env.test
+++ b/.env.test
@@ -3,6 +3,7 @@ AWS_DEFAULT_REGION=eu-west-2
 DELETION_ENABLED=true
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
 FEEDBACK_URL='https://dev.trade-tariff.service.gov.uk/feedback'
+GOVUK_APP_DOMAIN='*'
 IDENTITY_AUTHENTICATION_ENABLED=true
 LOCALSTACK_HOST='host.docker.internal'
 PORT=3000
