Make log in flow simplere and fix some tests

--- a/.env.development
+++ b/.env.development
@@ -1,14 +1,14 @@
 # Dev Bypass Authentication (skip identity service)
 AWS_DEFAULT_REGION=eu-west-2
 DELETION_ENABLED=true
-DEV_BYPASS_ADMIN_PASSWORD=admin
+DEV_BYPASS_ADMIN_PASSWORD=admin123
 DEV_BYPASS_AUTH=true
-DEV_BYPASS_USER_PASSWORD=dev123
+DEV_BYPASS_USER_PASSWORD=tariff123
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
 FEATURE_FLAG_ROLE_REQUEST=true
 GOVUK_APP_DOMAIN='*'
-IDENTITY_AUTHENTICATION_ENABLED=true
 LOCALSTACK_HOST='host.docker.internal'
 PORT=3004
 RAILS_LOG_LEVEL=debug
 UK_BACKEND_URL=http://localhost:3000/uk/api
+WEB_CONCURRENCY=0
