Fix role request emails

--- a/.env.development
+++ b/.env.development
@@ -5,6 +5,7 @@ DEV_BYPASS_ADMIN_PASSWORD=admin123
 DEV_BYPASS_AUTH=true
 DEV_BYPASS_USER_PASSWORD=tariff123
 ENCRYPTION_KEY=+WxrxtmkNdODyHrrwh1K2msWts1HVCCf7B98Q0odcUs=
+ENVIRONMENT=development
 FEATURE_FLAG_ROLE_REQUEST=true
 GOVUK_APP_DOMAIN='*'
 LOCALSTACK_HOST='host.docker.internal'
