Create: Trade Tariff keys via Identity + API Gateway

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,9 @@
 # Dev Bypass Authentication (skip identity service)
+# IDENTITY_API_TOKEN=<bearer token from identity service>
+# IDENTITY_BASE_URL=http://localhost:3005
+# If unset, seeds create a stub key and the create flow will fail until set.
+# Optional: required only if you want to create real Trade Tariff keys (Cognito + API Gateway).
+# TRADE_TARIFF_USAGE_PLAN_ID=<usage plan id from API Gateway - see docs/TRADE_TARIFF_KEYS_SETUP.md>
 AWS_DEFAULT_REGION=eu-west-2
 DELETION_ENABLED=true
 DEV_BYPASS_ADMIN_PASSWORD=admin123
