Revoke: Disable API Gateway key and set revoked_at when revoking Trade Tariff key

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # Dev Bypass Authentication (skip identity service)
-# IDENTITY_API_TOKEN=<bearer token from identity service>
+# IDENTITY_API_KEY=<bearer token from identity service>
 # IDENTITY_BASE_URL=http://localhost:3005
 # If unset, seeds create a stub key and the create flow will fail until set.
 # Optional: required only if you want to create real Trade Tariff keys (Cognito + API Gateway).
